# emerson_thermostat

./: CMakeLists.txt  README.md  main.c
include/: menu.h  statemachine.h  thermostat.h
src/: menu.c  statemachine.c  thermostat.c
